--- a/COVID-stocks/CovidStocks.ipynb
+++ b/COVID-stocks/CovidStocks.ipynb
@@ -1584,18 +1584,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "output_type": "error",
-     "ename": "TypeError",
-     "evalue": "insert_one() takes from 2 to 4 positional arguments but 5 were given",
+     "ename": "AttributeError",
+     "evalue": "'dict' object has no attribute 'in_transaction'",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-5-40c9ca558298>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;31m# if pymongo >= 3.0 use insert_one() for inserting one document & insertMany() for multiple\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 18\u001b[1;33m \u001b[0mcollection\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minsert_one\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfile_data1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfile_data2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfile_data3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfile_data4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: insert_one() takes from 2 to 4 positional arguments but 5 were given"
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-7-6fb8e021e243>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;31m# if pymongo >= 3.0 use insert_one() for inserting one document & insertMany() for multiple\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 18\u001b[1;33m \u001b[0mcollection\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minsert_many\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfile_data1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfile_data2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfile_data3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfile_data4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\pymongo\\collection.py\u001b[0m in \u001b[0;36minsert_many\u001b[1;34m(self, documents, ordered, bypass_document_validation, session)\u001b[0m\n\u001b[0;32m    753\u001b[0m                 \u001b[1;32myield\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mmessage\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_INSERT\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdocument\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    754\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 755\u001b[1;33m         \u001b[0mwrite_concern\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_write_concern_for\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msession\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    756\u001b[0m         \u001b[0mblk\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_Bulk\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mordered\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbypass_document_validation\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    757\u001b[0m         \u001b[0mblk\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mops\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mdoc\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mdoc\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mgen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\pymongo\\common.py\u001b[0m in \u001b[0;36m_write_concern_for\u001b[1;34m(self, session)\u001b[0m\n\u001b[0;32m    825\u001b[0m         \"\"\"\n\u001b[0;32m    826\u001b[0m         \u001b[1;31m# Override this operation's write concern with the transaction's.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 827\u001b[1;33m         \u001b[1;32mif\u001b[0m \u001b[0msession\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0msession\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0min_transaction\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    828\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mDEFAULT_WRITE_CONCERN\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    829\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite_concern\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'dict' object has no attribute 'in_transaction'"
      ]
     }
    ],
@@ -1613,15 +1615,14 @@
     "with open('Stock Data/WeeklyCovidStocks_SP500.json') as g:\n",
     "    file_data3 = json.load(g)\n",
     "\n",
-    "with open('Stock Data/MonthlyCovidStocks_SP500.json') as g:\n",
-    "    file_data4 = json.load(g)\n",
+    "with open('Stock Data/MonthlyCovidStocks_SP500.json') as j:\n",
+    "    file_data4 = json.load(j)\n",
     "\n",
     "# if pymongo >= 3.0 use insert_one() for inserting one document & insertMany() for multiple\n",
-    "collection.insert_one(file_data1, file_data2, file_data3, file_data4)\n",
+    "collection.insert_many(file_data1, file_data2, file_data3, file_data4)\n",
     "\n",
     "\n",
-    "client.close()\n",
-    ""
+    "client.close()\n"
    ]
   },
   {
@@ -1648,6 +1649,178 @@
     "\n",
     "# if pymongo >= 3.0 use insert_one() for inserting one document & insertMany() for multiple\n",
     "collection.insertMany(file_data1, file_data2, file_data3, file_data4)\n",
+    "\n",
+    "\n",
+    "client.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = MongoClient('localhost', 27017)\n",
+    "db = client['pro3news']\n",
+    "collection= db['IntraDayCovidStocks_60min_SP500']\n",
+    "\n",
+    "with open('Stock Data/IntraDayCovidStocks_60min_SP500.json') as g:\n",
+    "    file_data = json.load(g)\n",
+    "\n",
+    "# if pymongo >= 3.0 use insert_one() for inserting one document & insertMany() for multiple\n",
+    "collection.insert_one(file_data)\n",
+    "\n",
+    "\n",
+    "client.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = MongoClient('localhost', 27017)\n",
+    "db = client['pro3news']\n",
+    "collection= db['']\n",
+    "\n",
+    "\n",
+    "\n",
+    "# if pymongo >= 3.0 use insert_one() for inserting one document & insertMany() for multiple\n",
+    "collection.insert_one(file_data)\n",
+    "\n",
+    "\n",
+    "client.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = MongoClient('localhost', 27017)\n",
+    "db = client['pro3news']\n",
+    "collection= db['']\n",
+    "\n",
+    "\n",
+    "\n",
+    "# if pymongo >= 3.0 use insert_one() for inserting one document & insertMany() for multiple\n",
+    "collection.insert_one(file_data)\n",
+    "\n",
+    "\n",
+    "client.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = MongoClient('localhost', 27017)\n",
+    "db = client['pro3news']\n",
+    "collection= db['']\n",
+    "\n",
+    "\n",
+    "\n",
+    "# if pymongo >= 3.0 use insert_one() for inserting one document & insertMany() for multiple\n",
+    "collection.insert_one(file_data)\n",
+    "\n",
+    "\n",
+    "client.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = MongoClient('localhost', 27017)\n",
+    "db = client['pro3news']\n",
+    "collection= db['']\n",
+    "\n",
+    "\n",
+    "\n",
+    "# if pymongo >= 3.0 use insert_one() for inserting one document & insertMany() for multiple\n",
+    "collection.insert_one(file_data)\n",
+    "\n",
+    "\n",
+    "client.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = MongoClient('localhost', 27017)\n",
+    "db = client['pro3news']\n",
+    "collection= db['']\n",
+    "\n",
+    "\n",
+    "\n",
+    "# if pymongo >= 3.0 use insert_one() for inserting one document & insertMany() for multiple\n",
+    "collection.insert_one(file_data)\n",
+    "\n",
+    "\n",
+    "client.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = MongoClient('localhost', 27017)\n",
+    "db = client['pro3news']\n",
+    "collection= db['']\n",
+    "\n",
+    "\n",
+    "\n",
+    "# if pymongo >= 3.0 use insert_one() for inserting one document & insertMany() for multiple\n",
+    "collection.insert_one(file_data)\n",
+    "\n",
+    "\n",
+    "client.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = MongoClient('localhost', 27017)\n",
+    "db = client['pro3news']\n",
+    "collection= db['']\n",
+    "\n",
+    "\n",
+    "\n",
+    "# if pymongo >= 3.0 use insert_one() for inserting one document & insertMany() for multiple\n",
+    "collection.insert_one(file_data)\n",
+    "\n",
+    "\n",
+    "client.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = MongoClient('localhost', 27017)\n",
+    "db = client['pro3news']\n",
+    "collection= db['']\n",
+    "\n",
+    "\n",
+    "\n",
+    "# if pymongo >= 3.0 use insert_one() for inserting one document & insertMany() for multiple\n",
+    "collection.insert_one(file_data)\n",
     "\n",
     "\n",
     "client.close()"
