keywords front-end

--- a/COVID-news/NLP_clean.ipynb
+++ b/COVID-news/NLP_clean.ipynb
@@ -4177,7 +4177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4188,7 +4188,7 @@
     "db = client['pro3news']\n",
     "collection= db['keywords']\n",
     "\n",
-    "with open('word_counts_transpose.json') as g:\n",
+    "with open('samples.json') as g:\n",
     "    file_data = json.load(g)\n",
     "\n",
     "# if pymongo >= 3.0 use insert_one() for inserting one document\n",
