vega/ b. flask updates

--- a/COVID-stocks/CovidStocks.ipynb
+++ b/COVID-stocks/CovidStocks.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,12 +23,12 @@
     "from pprint import pprint\n",
     "from config import AV_API_Key\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,160 +530,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>open</th>\n",
-       "      <th>high</th>\n",
-       "      <th>low</th>\n",
-       "      <th>close</th>\n",
-       "      <th>volume</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2020-04-17</th>\n",
-       "      <td>2842.4299</td>\n",
-       "      <td>2862.1599</td>\n",
-       "      <td>2830.8799</td>\n",
-       "      <td>2844.7000</td>\n",
-       "      <td>2411851790</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-04-16</th>\n",
-       "      <td>2799.3401</td>\n",
-       "      <td>2806.5100</td>\n",
-       "      <td>2764.3201</td>\n",
-       "      <td>2799.5500</td>\n",
-       "      <td>5179990000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-04-15</th>\n",
-       "      <td>2795.6399</td>\n",
-       "      <td>2801.8799</td>\n",
-       "      <td>2761.5400</td>\n",
-       "      <td>2783.3601</td>\n",
-       "      <td>5203390000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-04-14</th>\n",
-       "      <td>2805.1001</td>\n",
-       "      <td>2851.8501</td>\n",
-       "      <td>2805.1001</td>\n",
-       "      <td>2846.0601</td>\n",
-       "      <td>5567400000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-04-13</th>\n",
-       "      <td>2782.4600</td>\n",
-       "      <td>2782.4600</td>\n",
-       "      <td>2721.1699</td>\n",
-       "      <td>2761.6299</td>\n",
-       "      <td>5274310000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-12-13</th>\n",
-       "      <td>3166.6499</td>\n",
-       "      <td>3182.6799</td>\n",
-       "      <td>3156.5100</td>\n",
-       "      <td>3168.8000</td>\n",
-       "      <td>3736870000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-12-12</th>\n",
-       "      <td>3141.2300</td>\n",
-       "      <td>3176.2800</td>\n",
-       "      <td>3138.4700</td>\n",
-       "      <td>3168.5701</td>\n",
-       "      <td>3990690000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-12-11</th>\n",
-       "      <td>3135.7500</td>\n",
-       "      <td>3143.9800</td>\n",
-       "      <td>3133.2100</td>\n",
-       "      <td>3141.6299</td>\n",
-       "      <td>3252540000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-12-10</th>\n",
-       "      <td>3135.3601</td>\n",
-       "      <td>3142.1201</td>\n",
-       "      <td>3126.0901</td>\n",
-       "      <td>3132.5200</td>\n",
-       "      <td>3343790000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-12-09</th>\n",
-       "      <td>3141.8601</td>\n",
-       "      <td>3148.8701</td>\n",
-       "      <td>3135.4600</td>\n",
-       "      <td>3135.9600</td>\n",
-       "      <td>3345990000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>90 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 open       high        low      close      volume\n",
-       "Date                                                              \n",
-       "2020-04-17  2842.4299  2862.1599  2830.8799  2844.7000  2411851790\n",
-       "2020-04-16  2799.3401  2806.5100  2764.3201  2799.5500  5179990000\n",
-       "2020-04-15  2795.6399  2801.8799  2761.5400  2783.3601  5203390000\n",
-       "2020-04-14  2805.1001  2851.8501  2805.1001  2846.0601  5567400000\n",
-       "2020-04-13  2782.4600  2782.4600  2721.1699  2761.6299  5274310000\n",
-       "...               ...        ...        ...        ...         ...\n",
-       "2019-12-13  3166.6499  3182.6799  3156.5100  3168.8000  3736870000\n",
-       "2019-12-12  3141.2300  3176.2800  3138.4700  3168.5701  3990690000\n",
-       "2019-12-11  3135.7500  3143.9800  3133.2100  3141.6299  3252540000\n",
-       "2019-12-10  3135.3601  3142.1201  3126.0901  3132.5200  3343790000\n",
-       "2019-12-09  3141.8601  3148.8701  3135.4600  3135.9600  3345990000\n",
-       "\n",
-       "[90 rows x 5 columns]"
-      ]
+      "text/plain": "   CurrentDate       open       high        low      close      volume\n0   2020-04-28  2909.9600  2921.1499  2862.7900  2887.2100  2102070868\n1   2020-04-27  2913.7982  2923.8459  2883.6047  2909.9600      198102\n2   2020-04-24  2812.6399  2842.7100  2791.7600  2836.7400  5374480000\n3   2020-04-23  2810.4199  2844.8999  2794.2600  2797.8000  5756520000\n4   2020-04-22  2787.8899  2815.1001  2775.9500  2799.3101  5049660000\n..         ...        ...        ...        ...        ...         ...\n85  2019-12-24  3225.4500  3226.4299  3220.5100  3223.3799  1296540000\n86  2019-12-23  3226.0500  3227.7800  3222.3000  3224.0100  3060610000\n87  2019-12-20  3223.3301  3225.6499  3216.0300  3221.2200  6454270000\n88  2019-12-19  3192.3201  3205.4800  3192.3201  3205.3701  3720450000\n89  2019-12-18  3195.2100  3198.4800  3191.1399  3191.1399  4014080000\n\n[90 rows x 6 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>CurrentDate</th>\n      <th>open</th>\n      <th>high</th>\n      <th>low</th>\n      <th>close</th>\n      <th>volume</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0</td>\n      <td>2020-04-28</td>\n      <td>2909.9600</td>\n      <td>2921.1499</td>\n      <td>2862.7900</td>\n      <td>2887.2100</td>\n      <td>2102070868</td>\n    </tr>\n    <tr>\n      <td>1</td>\n      <td>2020-04-27</td>\n      <td>2913.7982</td>\n      <td>2923.8459</td>\n      <td>2883.6047</td>\n      <td>2909.9600</td>\n      <td>198102</td>\n    </tr>\n    <tr>\n      <td>2</td>\n      <td>2020-04-24</td>\n      <td>2812.6399</td>\n      <td>2842.7100</td>\n      <td>2791.7600</td>\n      <td>2836.7400</td>\n      <td>5374480000</td>\n    </tr>\n    <tr>\n      <td>3</td>\n      <td>2020-04-23</td>\n      <td>2810.4199</td>\n      <td>2844.8999</td>\n      <td>2794.2600</td>\n      <td>2797.8000</td>\n      <td>5756520000</td>\n    </tr>\n    <tr>\n      <td>4</td>\n      <td>2020-04-22</td>\n      <td>2787.8899</td>\n      <td>2815.1001</td>\n      <td>2775.9500</td>\n      <td>2799.3101</td>\n      <td>5049660000</td>\n    </tr>\n    <tr>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <td>85</td>\n      <td>2019-12-24</td>\n      <td>3225.4500</td>\n      <td>3226.4299</td>\n      <td>3220.5100</td>\n      <td>3223.3799</td>\n      <td>1296540000</td>\n    </tr>\n    <tr>\n      <td>86</td>\n      <td>2019-12-23</td>\n      <td>3226.0500</td>\n      <td>3227.7800</td>\n      <td>3222.3000</td>\n      <td>3224.0100</td>\n      <td>3060610000</td>\n    </tr>\n    <tr>\n      <td>87</td>\n      <td>2019-12-20</td>\n      <td>3223.3301</td>\n      <td>3225.6499</td>\n      <td>3216.0300</td>\n      <td>3221.2200</td>\n      <td>6454270000</td>\n    </tr>\n    <tr>\n      <td>88</td>\n      <td>2019-12-19</td>\n      <td>3192.3201</td>\n      <td>3205.4800</td>\n      <td>3192.3201</td>\n      <td>3205.3701</td>\n      <td>3720450000</td>\n    </tr>\n    <tr>\n      <td>89</td>\n      <td>2019-12-18</td>\n      <td>3195.2100</td>\n      <td>3198.4800</td>\n      <td>3191.1399</td>\n      <td>3191.1399</td>\n      <td>4014080000</td>\n    </tr>\n  </tbody>\n</table>\n<p>90 rows × 6 columns</p>\n</div>"
      },
-     "execution_count": 93,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 14
     }
    ],
    "source": [
@@ -691,6 +548,9 @@
     "dailyDFsp = dailyDFsp.transpose()\n",
     "dailyDFsp.index.name = 'Date'\n",
     "dailyDFsp = dailyDFsp.rename(columns={\"1. open\": \"open\", \"2. high\": \"high\", \"3. low\":\"low\", \"4. close\":\"close\", \"5. volume\":\"volume\", })\n",
+    "p = dailyDFsp.index.values\n",
+    "dailyDFsp.insert( 0, column=\"CurrentDate\",value = p)\n",
+    "dailyDFsp =  dailyDFsp.reset_index(drop = True)\n",
     "# weeklyDF = pd.DataFrame(np.random.randn(16, 5), index=monthlyDates2020, columns=['open', 'high', 'low', 'close', 'volume'])\n",
     "dailyDFsp = dailyDFsp.head(90)\n",
     "dailyDFsp"
@@ -1526,14 +1386,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "intraDFsp60.to_json(\"Stock Data/IntraDayCovidStocks_60min_SP500.json\", orient='index')\n",
-    "dailyDFsp.to_json(\"Stock Data/DailyCovidStocks_SP500.json\", orient='index')\n",
-    "weeklyDFsp.to_json(\"Stock Data/WeeklyCovidStocks_SP500.json\", orient='index')\n",
-    "monthlyDFsp.to_json(\"Stock Data/MonthlyCovidStocks_SP500.json\", orient='index')"
+    "# intraDFsp60.to_json(\"Stock Data/IntraDayCovidStocks_60min_SP500.json\", orient='index')\n",
+    "dailyDFsp.to_json(\"Stock Data/DailyCovidStocks_SP500.json\", orient='records')\n",
+    "# weeklyDFsp.to_json(\"Stock Data/WeeklyCovidStocks_SP500.json\", orient='index')\n",
+    "# monthlyDFsp.to_json(\"Stock Data/MonthlyCovidStocks_SP500.json\", orient='index')"
    ]
   },
   {
